# phpserialize-rs

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMPROVEMENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release.yml
crates/php-deserialize-core/: Cargo.toml
crates/php-deserialize-core/benches/: parser.rs
crates/php-deserialize-core/src/: error.rs  json.rs  lib.rs  parser.rs  types.rs
crates/php-deserialize-python/: Cargo.toml
crates/php-deserialize-python/src/: lib.rs
docs/: api.html  index.html
python/php_deserialize/: __init__.py  __init__.pyi  spark.py
tests/fixtures/: generate_fixtures.php
tests/python/: test_basic.py  test_edge_cases.py  test_property.py  test_real_world.py
